--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "halo-security",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/halojs/halo-security"
@@ -47,6 +47,7 @@
     ]
   },
   "dependencies": {
+    "csrf": "^3.0.6",
     "deepmerge": "^1.3.2",
     "ip-filter": "^2.0.0"
   }
